Fix the title overflowing on small screens

--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -34,7 +34,12 @@
     border-bottom: 5px solid $gray-border;
     padding-bottom: 40px;
 
-    h1 { font-size: 50px; }
+    h1 {
+        font-size: 50px;
+        @media only screen and (max-width: 370px) {
+            font-size: 40px;
+        }
+    }
 
     .links a:not(:first-child) {
         margin: 0 20px;
